--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,17 @@
 body{
+  margin:0;
   background-color: white;
+  font-weight:400;
+}
+
+.sidenav{
+  width:80%;
+  margin: 0 auto;
 }
 
 h1{
   color: black;
-  font-size: 50px;
+  font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 30px;
   padding-left: 50px;
@@ -21,11 +28,12 @@ h2{
   margin: 50px;
 }
 
-head{
+header{
   background-color: #55d6aa;
+  font-weight:400;
 }
 
-head::after{
+header::after{
   content: '';
   display: table;
   clear: both;
@@ -33,16 +41,53 @@ head::after{
 }
 
 nav{
-  float: right;
+  text-align:center;
+  float: none;
 }
 
-ul{
+nav ul{
   margin:0;
   padding:0;
   list-style: none;
 }
 
-li{
+nav li{
   display: inline-block;
   margin-left: 70px;
+  padding-top: 25px;
+  position: relative;
+}
+
+nav a{
+  color: #444;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+nav a:hover{
+  color: #000;
+}
+
+nav a::before{
+  content:'';
+  display: block;
+  height: 5px;
+  width: 0%;
+  background-color:#444;
+  position:absolute;
+  top:0;
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before{
+  width:100%;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 600px;
 }
