--- a/static/css/tracker.css
+++ b/static/css/tracker.css
@@ -1,11 +1,7 @@
-body {
-  background-color: #ad3723;
-  background-image: linear-gradient(#ad3723, peru);
-  background-size: contain;
-  background-attachment: fixed;
-  font-family: 'Roboto', sans-serif;
+#tracker-map {
+  height: 700px;
 }
-.track {
-  width: 1420px;
-  heigth:1000px;
+.circle:hover{
+  stroke: black;
+  stroke-width: 4px;
 }
