:green_heart: Add title and small info for tracker

--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+
+    <h1>Coronavirus-19 Tracker</h1>
+    <p>This tracker will show current total cases of each county in your state.</p>
     <div id="tracker-map"></div>
 
 
