--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -6,20 +6,22 @@
   <meta name="viewport" content="width=device-width">
   <title>CoTerminator</title>
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" />
-  <div class="sidenav">
-    <a class="navbar-brand">CoTerminator</a>
-    <nav>
-      <ul>
-
-        <li><a href="{{ url_for('.diagnosis') }}">Talk to our Diagnosis Machine</li>
-        <li><a href="{{ url_for('.tracker') }}">Coronavirus Updates/Tracker</li>
-        <li><a href="{{ url_for('.faq') }}">Covid FAQ</li>
-      </ul>
-    </nav>
-  </div>
 </head>
 
 <body>
+  <header>
+    <div class="sidenav">
+      <a class="navbar-brand"></a>
+      <nav>
+        <ul>
+
+          <li><a href="{{ url_for('.diagnosis') }}">Talk to our Diagnosis Machine</a></li>
+          <li><a href="{{ url_for('.tracker') }}">Coronavirus Updates/Tracker</a></li>
+          <li><a href="{{ url_for('.faq') }}">Covid FAQ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <div class="overview">
 
 
