:heavy_plus_sign: add home link

--- a/services/web/templates/tracker.html
+++ b/services/web/templates/tracker.html
@@ -36,6 +36,8 @@
       frameborder="0"></iframe>
   </div>
 
+  <a href="{{ url_for('.index') }}">Head back to our home page</a>
+
   <!-- Load d3.js and the geo projection plugin -->
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
