:green_heart: add title and remove font

--- a/services/web/templates/diagnosis.html
+++ b/services/web/templates/diagnosis.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <h1>Diagnosis System</h1>
+    <p>You will take a quick test to determine whether you are contracted to COVID-19 or not.</p>
     <form id="diagnosis">
         <fieldset id="chills">
             <label for="chills">Have you experienced any chills lately?</label>
