--- a/services/web/static/css/style.css
+++ b/services/web/static/css/style.css
@@ -1,6 +1,6 @@
 body{
   margin:0;
-  background-color: white;
+  background-color: skyblue;
   font-weight:400;
 }
 
@@ -10,7 +10,7 @@ body{
 }
 
 h1{
-  color: black;
+  color:black;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 30px;
