:green_heart: add testing centers in nav

--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -20,6 +20,8 @@
           <li><a href="{{ url_for('.tracker') }}">Coronavirus Updates/Tracker</a></li>
           <li><a href="{{ url_for('.faq') }}">Covid FAQ</a></li>
           <li><a href="{{ url_for('.fnews') }}">COVID Fake New</a></li>
+          <li><a href="https://www.arcgis.com/apps/webappviewer/index.html?id=2ec47819f57c40598a4eaf45bf9e0d16">
+              Testing Centers</li>
         </ul>
       </nav>
     </div>
@@ -35,8 +37,9 @@
     <h3>
       <center>This website includes many different features: We have a diagnosis machine that will tell you how likely
         you are to have contracted Covid-19 based on a series of questions. Next, we include a Covid FAQ section, taken
-        from the CDC. We have coronavirus updates that will tell you about the latest infographics around the world, and
-        we have also provided you with testing centers near your home.</center>
+        from the CDC. We have live coronavirus updates that will tell you about the latest infographics around the
+        world, and we have also provided you with a website that can inform you of testing centers near your home. We
+        also have a tracker that can track cases near you and in your county!</center>
     </h3>
 
     <img
